# MEMEX

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEMEX.md  MEMEXdesigndoc.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ADR.md  API.md  CONFIGURATION.md  INVARIANTS.md  ONBOARDING.md  QUICKSTART.md
memex/: __init__.py  __main__.py  daemon.py
memex/answer/: __init__.py  chat.py  prompt.py
memex/api/: __init__.py  app.py  middleware.py  models.py
memex/config/: __init__.py  chunking.toml  default_config.toml  redaction_patterns.toml  retention.toml  retrieval_weights.toml  settings.py  slos.toml
memex/db/: __init__.py  chroma.py  kuzu.py  sqlite.py
memex/index/: __init__.py  chunker.py  embedder.py  graph_extractor.py  migration.py
memex/ingest/: __init__.py  base.py  browser.py  clipboard.py  filesystem.py  queue.py  terminal.py
memex/observability/: __init__.py  logging.py  metrics.py  slos.py
memex/parse/: __init__.py  base.py  code_parser.py  dispatcher.py  email_parser.py  html_parser.py  markdown_parser.py  pdf_parser.py  plain_parser.py
memex/protect/: __init__.py  forget.py  purge.py  redactor.py
memex/recall/: __init__.py  hybrid_retrieval.py
memex/tui/: __init__.py  app.py
memex/web/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_pipeline.py
tests/invariants/: __init__.py  test_config_hygiene.py  test_forget.py  test_ingestion.py  test_redaction.py  test_retrieval.py  test_security.py
tests/unit/: __init__.py  test_chunker.py  (+5 more)
(+10 files in other folders)
