[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memex"
version = "2.0.0"
description = "MEMEX — Local-First Passive Second Brain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "knarayanareddy"}]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "toml>=0.10.2",
    "chromadb>=0.5.0",
    "kuzu>=0.4.0",
    "spacy>=3.7.0",
    "watchdog>=4.0.0",
    "pyperclip>=1.9.0",
    "pdfminer.six>=20231228",
    "readability-lxml>=0.4.1",
    "lxml>=5.1.0",
    "markdown-it-py>=3.0.0",
    "chardet>=5.2.0",
    "tree-sitter>=0.21.0",
    "sse-starlette>=2.0.0",
    "textual>=0.56.0",
    "psutil>=5.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
memex = "memex.__main__:main"

[tool.setuptools.packages.find]
include = ["memex*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "invariant: Blocking invariant test",
    "integration: Integration test",
    "perf: Performance benchmark",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
